--- a/german.yaml
+++ b/german.yaml
@@ -5,118 +5,118 @@ translation:
 
 # Navigation
 nav:
-  episodes: "Episodes"
+  episodes: "Episoden"
   about: "Über Uns"
   ep1: "Warum brauchen wir HTTPS?"
   ep2: "Die Schlüssel"
-  ep3: "The handshake"
-  ep4: "HTTPS, SSL, TLS Unterschiede"
-  ep5: "Certificate Authorities"
+  ep3: "Der Hnadschlag" # ?
+  ep4: "HTTPS, SSL, TLS – Unterschiede"
+  ep5: "Zertifizierungsstellen"
   social: "Sei eine soziale Katze"
   more_comics: "Mehr Lesen"
-  continue_reading: "Lesen fortsetzen"
+  continue_reading: "Weiterlesen"
 
 # Home page
 home:
   title: "Wie HTTPS funktioniert"
-  certificat_cta: "Lesen beginnen"
+  certificat_cta: "Jetzt lesen"
   subtitle: "Wie HTTPS funktioniert ...in einem Comic!"
-  p1: "Have you ever wondered why a lock icon appears on your browser URL bar? And why is it important? We did too, and this comic is for you!"
-  p2: "Follow the adventures of Certificat, Browserbird, and Compugter as they explain why HTTPS is crucial for the future of the web and how it all works together."
-  p3: "Don't let the bad crabs get you (you'll know what we mean in the comic). Get to know HTTPS and why it is essential to your privacy."
-  small_cta: "Start reading now"
+  p1: "Hast du dich schon einmal gefragt, warum ein Schloss-Symbol in der Adressleiste deines Browsers erscheint? Und warum das wichtig ist? Wir auch – deshalb gibt es diesen Comic!"
+  p2: "Begleite die Abenteuer von Certificat, Browserbird und Compugter, während sie erklären, warum HTTPS entscheidend für die Zukunft des Internets ist und wie es funktioniert."
+  p3: "Lass dich nicht von den bösen Krabben erwischen (du wirst im Comic verstehen, was wir meinen). Lerne HTTPS kennen und warum es für deine Privatsphäre so wichtig ist."
+  small_cta: "Jetzt starten"
 
 # Episode fragments for /episodes
 fragment:
-  ep1: "Start reading here. If there is only one thing that you take away from this comic, let it be this one."
-  ep2: "To understand how HTTPS works, you have to know how symmetric and asymmetric key encryption works. It sounds like big words, but really it's not."
-  ep3: "When you browse to a HTTP secure site, your browser and the server where it connects to have a secret handshake. We break this down and bring it into the real world so you can greet your friends with the secret handshake."
-  ep4: "It's easy to confuse HTTPS, SSL, and TLS. We often use these terms interchangeably. Let's talk about each of them with a bit of hiss-tory."
-  ep5: "What do they do? Why do we need them? How do they validate certificates? So many questions to answer in this last chapter of the comic!"
+  ep1: "Hier geht's los. Wenn du nur eine Sache aus diesem Comic mitnimmst, dann diese."
+  ep2: "Um HTTPS zu verstehen, musst du wissen, wie symmetrische und asymmetrische Verschlüsselung funktioniert. Klingt kompliziert, ist es aber nicht."
+  ep3: "Wenn du eine HTTPS-Seite aufrufst, machen dein Browser und der Server einen geheimen Handshake. Wir zeigen dir, wie das funktioniert – damit du deine Freunde demnächst mit einem geheimen Handshake begrüßen kannst."
+  ep4: "HTTPS, SSL und TLS werden oft verwechselt und synonym verwendet. Wir erklären dir, was was ist – mit ein bisschen Hiss-tory."
+  ep5: "Was machen Zertifizierungsstellen? Warum brauchen wir sie? Wie validieren sie Zertifikate? Viele Fragen, die wir im letzten Kapitel des Comics beantworten!"
 
 # Episodes
 ep1:
-  1: "Why do we need HTTPS?"
-  2: "We need HTTPS for 3 reasons."
-  3: "Privacy, integrity, and identification."
-  4: "Let's talk about privacy first."
-  5: "I'll use my friends as an example."
-  6: "no text"
-  7: "I am sending a message to Browserbird."
-  8: "Oh no! The message is not encrypted!"
-  9: "Crab is listening on the communication capturing the message."
-  10: "Potentially using it for evil."
-  11: "Privacy means that no one can eavesdrop on your messages."
-  12: "Bad crab. Bad."
-  13: "When you browse to a website without HTTPS, I could be eavesdropping on your password."
-  14: "The padlock on the URL bar of your browser tells you that there are no crabs watching over your shoulder."
-  15: "Reason number 2: integrity."
-  16: "Example coming up!"
-  17: "I am sending another message to Browserbird unencrypted."
-  18: "But before it reaches Browserbird, I intercept the message."
-  19: "I update the message to say bad things about Browserbird and forward it to him."
-  20: "Why would Compugter say such things about me?"
-  21: "no text"
-  22: "This is often called a man-in-the-middle attack."
-  23: "And crab-in-the-middle attacks are the worst."
-  24: "Bad Crab. Bad."
-  25: "Integrity means that the message is not manipulated on the way to its destination."
-  26: "I make sure that your communication is not being tampered with."
-  27: "Reason number 3: identification."
-  28: "Example time!"
-  29: "Identification means that I can check that this message is coming from Compugter."
-  30: "A digital signature attached to a message can identify the sender."
-  31: "The digital signature is not the closing text on your emails. Anyone could copy that ;)"
-  32: "And when you are browsing the web, identification means that the site that you are visiting is indeed the one you think it is."
-  33: "HTTPS, via SSL certificates, ensures you are connected exactly with the receiver you would expect."
-  34: "This SSL certificate is valid and has been issued by a legitimate Certificate Authority. You are good to go."
-  35: "We'll be talking more about SSL certificates and Certificate Authorities soon, so stay tuned."
-  36: "In summary, privacy, integrity and identification are the main reasons why HTTPS is important."
-  next: "Next on HowHTTPS.works..."
-  next_teaser: "Now that we know the why, the next step is to understand symmetric and asymmetric encryption. Big words, but easy concepts."
+  1: "Warum brauchen wir HTTPS?"
+  2: "Wir brauchen HTTPS aus 3 Gründen."
+  3: "Privatsphäre, Integrität und Identifikation."
+  4: "Fangen wir mit der Privatsphäre an."
+  5: "Ich nehme meine Freunde als Beispiel."
+  6: "kein Text"
+  7: "Ich schicke eine Nachricht an Browserbird."
+  8: "Oh nein! Die Nachricht ist nicht verschlüsselt!"
+  9: "Krabbe hört die Kommunikation ab und fängt die Nachricht ab."
+  10: "Und nutzt sie vielleicht für böse Zwecke."
+  11: "Privatsphäre bedeutet, dass niemand deine Nachrichten belauschen kann."
+  12: "Böse Krabbe. Böse."
+  13: "Wenn du ohne HTTPS im Internet surfst, kann ich womöglich dein Passwort ausspionieren."
+  14: "Das Schloss-Symbol in der Adressleiste zeigt dir, dass keine Krabben über deine Schulter schauen."
+  15: "Grund Nummer 2: Integrität."
+  16: "Beispiel folgt!"
+  17: "Ich schicke wieder eine unverschlüsselte Nachricht an Browserbird."
+  18: "Aber bevor sie bei Browserbird ankommt, fange ich sie ab."
+  19: "Ich ändere die Nachricht, sodass sie gemeine Dinge über Browserbird enthält, und leite sie weiter."
+  20: "Warum sollte Compugter so etwas über mich sagen?"
+  21: "kein Text"
+  22: "Das nennt man einen Man-in-the-Middle-Angriff."
+  23: "Und Krabben-in-der-Mitte-Angriffe sind die schlimmsten."
+  24: "Böse Krabbe. Böse."
+  25: "Integrität bedeutet, dass eine Nachricht auf dem Weg nicht verändert wird."
+  26: "Ich sorge dafür, dass deine Kommunikation nicht manipuliert wird."
+  27: "Grund Nummer 3: Identifikation."
+  28: "Beispielzeit!"
+  29: "Identifikation bedeutet, dass ich prüfen kann, dass diese Nachricht wirklich von Compugter kommt."
+  30: "Eine digitale Signatur an der Nachricht kann den Absender identifizieren."
+  31: "Die digitale Signatur ist übrigens nicht der Gruß am Ende deiner E-Mails. Den kann jeder kopieren ;)"
+  32: "Beim Surfen bedeutet Identifikation, dass du sicher bist, mit der Seite verbunden zu sein, die du auch wirklich besuchen wolltest."
+  33: "HTTPS sorgt mithilfe von SSL-Zertifikaten dafür, dass du genau mit dem richtigen Empfänger verbunden bist."
+  34: "Dieses SSL-Zertifikat ist gültig und wurde von einer vertrauenswürdigen Zertifizierungsstelle ausgestellt. Alles gut!"
+  35: "Wir werden gleich noch mehr über SSL-Zertifikate und Zertifizierungsstellen sprechen – bleib dran."
+  36: "Zusammengefasst: Privatsphäre, Integrität und Identifikation sind die Hauptgründe für HTTPS."
+  next: "Weiter in WieHTTPS.funktioniert..."
+  next_teaser: "Jetzt, wo wir das Warum kennen, geht's ans Verstehen von symmetrischer und asymmetrischer Verschlüsselung. Klingt groß, ist aber leicht."
 
 ep2:
-  1: "The Keys"
-  2: "HTTPS needs a way to provide privacy, integrity, and identification on the web."
-  3: "And that mechanism is called 'encryption'."
-  4-1: "Let's talk about the two types of encryption algorithms."
-  4-2: "Now, where did I put those keys?"
-  5-1: "Finally!"
-  5-2: "Let's start with the symmetric key algorithm."
-  6: "In this scenario, there is only one key to encrypt and decrypt a message."
-  7: "Before sending a message to BrowserBird, I encrypt the message with a key."
-  8: "You can think of the encryption process like putting the message in a box and locking the box with a key."
-  9: "Only the person that has a copy of the key can open the box and read the message."
-  10: "This guarantees that the box cannot be opened until it reaches the person with the right key."
-  11: "When Browserbird gets the box, they use their key to open it and read the message."
-  12: "It's important that the key is kept private. You should not share the key in plain text, or send it with the box. Or keep it in your pocket."
-  13: "Remember, anyone with the key can open the box."
-  14-1: "Using the box is a nice visual to understand encryption, but it's really oversimplifying it."
-  14-2: "Let's fix that!"
-  15: "In reality, anyone looking at the message without the key only sees nonsense text."
-  16: "This text was generated by an encryption algorithm."
-  17: "Which is a fancy way to say that the text was scrambled through a series of steps."
-  18: "It was transformed and spread out multiple times. Each time obfuscating the message further."
-  19: "To decrypt a message, we just need to apply the same steps, but in reverse order."
-  20: "The encryption key is mixed in with the message, so even if you know the encryption algorithm, without the key, the message is still nonsense."
-  21: "Here is what a key might look like."
-  22: "One main issue with symmetric keys is that they are hard to share."
-  23: "You have to be super careful with how you distribute the key."
-  24: "This brings us to asymmetric keys."
-  25: "With asymmetric keys, you have 2 keys."
-  26: "One key is public, the other one is private. They are paired and work together."
-  27-1: "Share your public key with anyone. Send it in plain text, make stickers, tattoos. Anything you want! It's public!"
-  27-2: "I like tattoos."
-  28: "Compugter is sending their public key to BrowserBird."
-  29: "And now I am sending a message back to them encrypting it with their public key."
-  30: "In other words, BrowserBird puts the message in a box and locks it with Compugter's public key."
-  31: "I can now use my private key to read the message."
-  32: "That's the main idea. Only the private key can open a box locked with the public key pair."
-  33: "I use Browserbird public key to send them another message."
-  34: "This is great not only for privacy, but also for identification since we know for sure that only the owner of the 2 keys can open the message."
-  35: "Next, we'll be looking at how symmetric and asymmetric keys play a role when we connect to a site with SSL."
-  next: "Next on HowHTTPS.works..."
-  next_teaser: "Hurray for encryption! What's next? Learn the secret handshake between your browser and the internet that makes your information safe and secured."
+  1: "Die Schlüssel"
+  2: "HTTPS braucht einen Weg, um Privatsphäre, Integrität und Identifikation im Internet zu gewährleisten."
+  3: "Das Zauberwort dafür heißt 'Verschlüsselung'."
+  4-1: "Lass uns über die zwei Arten von Verschlüsselung sprechen."
+  4-2: "Wo habe ich nur die Schlüssel hingelegt?"
+  5-1: "Endlich!"
+  5-2: "Fangen wir mit der symmetrischen Verschlüsselung an."
+  6: "Dabei gibt es nur einen Schlüssel, um Nachrichten zu verschlüsseln und zu entschlüsseln."
+  7: "Bevor ich BrowserBird eine Nachricht schicke, verschlüssele ich sie mit einem Schlüssel."
+  8: "Du kannst dir das so vorstellen, als ob du die Nachricht in eine Kiste legst und mit einem Schlüssel abschließt."
+  9: "Nur wer den Schlüssel hat, kann die Kiste öffnen und die Nachricht lesen."
+  10: "Das stellt sicher, dass die Kiste nicht geöffnet wird, bis sie beim richtigen Empfänger ankommt."
+  11: "Wenn Browserbird die Kiste bekommt, nutzt er den Schlüssel, um sie zu öffnen und die Nachricht zu lesen."
+  12: "Wichtig ist, dass der Schlüssel geheim bleibt. Du solltest ihn nicht im Klartext verschicken oder in der Kiste mitgeben. Oder in der Hosentasche aufbewahren."
+  13: "Denn jeder, der den Schlüssel hat, kann die Kiste öffnen."
+  14-1: "Die Kiste ist ein gutes Bild, aber sie vereinfacht das Ganze natürlich sehr."
+  14-2: "Lass uns das genauer anschauen!"
+  15: "In Wirklichkeit sieht jeder, der die Nachricht ohne Schlüssel anschaut, nur Kauderwelsch."
+  16: "Dieser Text wurde durch einen Verschlüsselungsalgorithmus erzeugt."
+  17: "Das bedeutet: Der Text wurde mehrfach umgewandelt und durcheinandergebracht."
+  18: "Er wurde mehrfach transformiert und verteilt, um ihn unleserlich zu machen."
+  19: "Um den Text wieder lesbar zu machen, muss man die Schritte rückwärts durchführen."
+  20: "Der Schlüssel wird mit der Nachricht verknüpft – selbst wenn du den Algorithmus kennst, kannst du den Text ohne Schlüssel nicht lesen."
+  21: "So könnte ein Schlüssel aussehen."
+  22: "Ein Problem bei symmetrischen Schlüsseln: Sie sind schwer zu verteilen."
+  23: "Du musst sehr vorsichtig sein, wie du den Schlüssel weitergibst."
+  24: "Deshalb gibt es asymmetrische Verschlüsselung."
+  25: "Dabei hast du zwei Schlüssel."
+  26: "Einen öffentlichen und einen privaten. Sie gehören zusammen."
+  27-1: "Den öffentlichen Schlüssel kannst du jedem geben. Per Klartext, als Sticker, als Tattoo – egal! Er ist öffentlich!"
+  27-2: "Ich mag Tattoos."
+  28: "Compugter schickt seinen öffentlichen Schlüssel an BrowserBird."
+  29: "Jetzt schicke ich eine Nachricht zurück, verschlüsselt mit seinem öffentlichen Schlüssel."
+  30: "Das heißt, BrowserBird packt die Nachricht in eine Kiste und verschließt sie mit Compugters öffentlichem Schlüssel."
+  31: "Nur ich kann mit meinem privaten Schlüssel die Kiste öffnen."
+  32: "Das ist der Clou: Nur der private Schlüssel kann eine mit dem öffentlichen Schlüssel verschlossene Kiste öffnen."
+  33: "Ich benutze den öffentlichen Schlüssel von BrowserBird, um ihm eine Nachricht zu schicken."
+  34: "Das ist nicht nur gut für die Privatsphäre, sondern auch für die Identifikation – weil nur der Besitzer des Schlüsselpaares die Nachricht lesen kann."
+  35: "Als Nächstes schauen wir uns an, wie symmetrische und asymmetrische Schlüssel beim SSL-Handshake zusammenarbeiten."
+  next: "Weiter in WieHTTPS.funktioniert..."
+  next_teaser: "Hurra für Verschlüsselung! Und jetzt? Lerne den geheimen Handshake zwischen deinem Browser und dem Internet kennen, der deine Daten schützt."
 
 ep3:
   1: "The Handshake"
